--- a/demo/viz.html
+++ b/demo/viz.html
@@ -76,6 +76,7 @@
   </div>
 
   <div id="auction"></div>
+  <div id="boardno"></div>
 
   <div id="current-trick">
   <div id="trick-card-north" class="trick-card"></div>
@@ -90,39 +91,77 @@
   <div id="tricks-ew" class="trick-count"><span>0</span></div>
   </div>
 
-  <div id="btn-prev" class="button"><</div>
-  <div id="btn-next" class="button">></div>
+  <div id="btn-start" class="button">&gt;&gt;&gt;</div>
+  <div id="btn-prev" class="button">&lt;</div>
+  <div id="btn-next" class="button">&gt;</div>
 
   </div>
 
-  <div>Click < and > to advance the play</div>
+  <div>Click &lt; and &gt; to advance the play</div>
 
   <div id="info"></div>
 
   <script type="text/javascript">
-          const urlParams = new URLSearchParams(location.search)
-          const dealId = parseInt(urlParams.get("deal"))
+        const urlParams = new URLSearchParams(location.search)
+        const dealId = parseInt(urlParams.get("deal"))
           
-          const log = data[dealId - 1]
+        const log = data[dealId - 1]
 
-          let deal = new Deal(log)
-          deal.start()
+        let deal = new Deal(log)
+        deal.start()
 
-          document.querySelector('#info').innerHTML = '<pre><code>' + JSON.stringify(log['bids'], null, 2) + '</code></pre>'
+        let i = 0
+        log['bids'].forEach(data => {
+            document.querySelector('#info').innerHTML += `
+            <p><strong>Bid:</strong> ${data.bid} ${data.who ? ' by ' + data.who : ''}</p>
+            `;
+            if (data.candidates.length > 0)
+                document.querySelector('#info').innerHTML += `
+                <p><strong>Candidates:</strong></p>
+                <ul>
+                    ${data.candidates.map(candidate => `
+                        <li>
+                            Call: ${candidate.call},
+                            ${candidate.expected_score !== undefined ? `Expected score: ${candidate.expected_score},` : ''}
+                            ${candidate.insta_score !== undefined ? `NN Score: ${candidate.insta_score},` : ''}
+                            ${candidate.adjustment !== undefined ? `Adjusted: ${candidate.adjustment}` : ''}
+                        </li>                               
+                    `).join('')}
+                </ul>
+                `;
+            if (data.hcp && (data.hcp != -1))
+                document.querySelector('#info').innerHTML += `
+                <p><strong>HCP:</strong> ${data.hcp.join(' - ')}</p>
+                <p><strong>Shape:</strong> ${data.shape.join('-')}</p>
+                `;
+            if (data.samples.length > 0)
+                document.querySelector('#info').innerHTML += `
+                <p  class="samples"  onclick="toggleSamples('sampleLines${i}')"><strong>Samples:</strong></p>
+                <div id="sampleLines${i}">
+                <ul>${data.samples.map(sample => `<li>${sample}</li>`).join('')}</ul>
+                </div>
+                `;
+            i += 1;
+        }
+        );
 
-          document.getElementById("btn-next").addEventListener("click", function() {
-              deal.next()
-          })
+        document.getElementById("btn-next").addEventListener("click", function() {
+            deal.next()
+        })
 
-          document.getElementById("btn-prev").addEventListener("click", function() {
-              deal.prev()
-          })
+        document.getElementById("btn-prev").addEventListener("click", function() {
+            deal.prev()
+        })
 
-          let dealerVuln = new DealerVuln(log['dealer'], log['vuln_ns'], log['vuln_ew'])
-          dealerVuln.render(document.getElementById("dealer-vuln"))
+        document.getElementById("btn-start").addEventListener("click", function () {
+            deal.start()
+        })
+                            
+        let dealerVuln = new DealerVuln(log['dealer'], log['vuln_ns'], log['vuln_ew'])
+        dealerVuln.render(document.getElementById("dealer-vuln"))
 
-          let auction = new Auction(log['dealer'], log['bids'])
-          auction.render(document.getElementById("auction"))
+        let auction = new Auction(log['dealer'], log['bids'])
+        auction.render(document.getElementById("auction"))
 
   </script>
 
