--- a/demo/viz.html
+++ b/demo/viz.html
@@ -136,11 +136,11 @@
                 `;
             if (data.samples.length > 0)
                 document.querySelector('#info').innerHTML += `
-                <p  class="samples"  onclick="toggleSamples('sampleLines${i}')"><strong>Samples:</strong></p>
-                <div id="sampleLines${i}" class="hidden">
-                <ul>${data.samples.map(sample => `<li>${sample}</li>`).join('')}</ul>
-                </div>
-                `;
+                    <h3 class="samples"  onclick="toggleSamples('sampleLines${i}')"><strong>Samples(${data.samples.length}):</strong></h3>
+                    <div id="sampleLines${i}" class="hidden">
+                    <ul>${data.samples.map(sample => `<li>${sample}</li>`).join('')}</ul>
+                    </div>
+                    `;
             i += 1;
         }
         );
