--- a/demo/viz.html
+++ b/demo/viz.html
@@ -138,7 +138,7 @@
                 document.querySelector('#info').innerHTML += `
                     <h3 class="samples"  onclick="toggleSamples('sampleLines${i}')"><strong>Samples(${data.samples.length}):</strong></h3>
                     <div id="sampleLines${i}" class="hidden">
-                    <ul>${data.samples.map(sample => `<li>${sample}</li>`).join('')}</ul>
+                    <ul>${data.samples.map(sample => `<li>${sample.replace(/\n/g,"<br>")}</li>`).join('')}</ul>
                     </div>
                     `;
             i += 1;
