--- a/src/frontend/bridge.html
+++ b/src/frontend/bridge.html
@@ -14,31 +14,8 @@
 <body>
 
     <div id="container">
-        <div id="north" class="grid-item">
-            <div id="bidding-box">
-                <div id="bidding-levels">
-                    <div>1</div>
-                    <div>2</div>
-                    <div>3</div>
-                    <div>4</div>
-                    <div>5</div>
-                    <div>6</div>
-                    <div>7</div>
-                </div>
-                <div id="bidding-suits" class="hidden">
-                    <div>&clubs;</div>
-                    <div class="red">&diams;</div>
-                    <div class="red">&hearts;</div>
-                    <div>&spades;</div>
-                    <div>NT</div>
-                </div>
-                <div id="bidding-calls">
-                    <div class="pass">PASS</div>
-                    <div class="double">X</div>
-                    <div class="redouble invalid">XX</div>
-                </div>
-            </div>
-        </div>
+        <div id="north" class="grid-item"></div>
+        <div id="auction" class="grid-item"></div>
         <div id="west" class="grid-item"></div>
         <div id="table" class="grid-item">
             <div id="table-container">
@@ -65,8 +42,8 @@
             </div>
         </div>
         <div id="east" class="grid-item"></div>
-        <div id="south" class="grid-item">
-        </div>
+        <div id="south" class="grid-item"></div>
+        <div id="bidding" class="grid-item"></div>
     </div>
 
     <div id="claim" style="display: none">
@@ -90,16 +67,30 @@
     <script type="text/javascript">
         console.log('starting')
 
+        let timeoutId
         const urlParams = new URLSearchParams(location.search)
         const dealId = urlParams.get("deal")
-        const playerId = urlParams.get("P")
+        const north = urlParams.get("N")
+        const east = urlParams.get("E")
+        const south = urlParams.get("S")
+        const west = urlParams.get("W")
+        const humandeclares = urlParams.get("H")
+        const autocomplete = urlParams.get("A")
         const board_no = urlParams.get("board_no")
+        let no_human = !north && !east && !south && !west
+        let player = ""
+        if (north) player += "&N=x"
+        if (east) player += "&E=x"
+        if (south) player += "&S=x"
+        if (west) player += "&W=x"
+        if (humandeclares) player += "&H=x"
+        if (autocomplete) player += "&A=x"
         var queryString = ""
         var ws
         if (dealId) {
-            queryString = "?deal=" + dealId + "&P=" + playerId + "&board_no=" + board_no
+            queryString = "?deal=" + dealId + "&board_no=" + board_no + player
         } else {
-            queryString = "?P=" + playerId + "&board_no=" + board_no
+            queryString = "?board_no=" + board_no + player
         }
         try {
 
@@ -143,22 +134,15 @@
             console.log('card click')
             if (deal.expectCardInput) {
                 let card = new Card(event.target.getAttribute('symbol'))
-
-                if (deal.turn == 2) {
-                    if (deal.hand.isPlayable(card, deal.currentTrick)) {
+                if (deal.hands[deal.turn]) {
+                    if (deal.hands[deal.turn].isPlayable(card, deal.currentTrick)) {
                         ws.send(card.symbol)
                         deal.expectCardInput = false
-                    } else {
-                        alert("Card not valid")
-                    }
-                } else if (deal.turn == 0) {
-                    if (deal.public.isPlayable(card, deal.currentTrick)) {
-                        ws.send(card.symbol)
-                        deal.expectCardInput = false
-                    } else {
-                        alert("Card not valid")
-                    }
+                        return
+                    } 
                 }
+
+                console.log(card, "not in hand")
             }
         }
 
@@ -182,7 +166,6 @@
             for (var i = 0; i < minBiddableSuit; i++) {
                 document.querySelector(bidSuitClasses[i]).classList.add("invalid")
             }
-
             
         }
 
@@ -222,6 +205,7 @@
             if (deal?.expectTrickConfirm) {
                 getTrickCardSlots().forEach(el => el.textContent = "")
                 ws.send('y')
+                if (timeoutId) clearTimeout(timeoutId);
                 deal.expectTrickConfirm = false
                 if (deal.renderClaim(document.querySelector("#claim"))) {
                     document.querySelector('#claim').style.display = 'block'
@@ -239,7 +223,7 @@
             let data = JSON.parse(event.data)
 
             if (data.message == "deal_start") {
-                deal = new Deal(data.dealer, data.vuln, parseHand(data.hand))
+                deal = new Deal(data.dealer, data.vuln, data.hand)
 
                 let dealerLabel = ['.label-north', '.label-east', '.label-south', '.label-west'][deal.dealer]
 
@@ -254,20 +238,23 @@
                 }
 
                 setTurn(deal.dealer)
-                console.log(deal)
-                deal.hand.render(document.querySelector('#south'))
-                deal.renderAuction(document.querySelector('#east'))
-                deal.renderBiddingBox(document.querySelector('#north'))
+
+                if (north || no_human) deal.hands[0].render(document.querySelector('#north'))
+                if (east || no_human) deal.hands[1].renderEW(document.querySelector('#east'))
+                if (south || no_human) deal.hands[2].render(document.querySelector('#south'))
+                if (west || no_human) deal.hands[3].renderEW(document.querySelector('#west'))
+                deal.renderAuction(document.querySelector('#auction'))
+                deal.renderBiddingBox(document.querySelector('#bidding'))
             } else if (data.message == "bid_made") {
                 deal.auction = data.auction
-                deal.renderAuction(document.querySelector('#east'))
+                deal.renderAuction(document.querySelector('#auction'))
                 deal.turn = (deal.turn + 1) % 4
             } else if (data.message == "get_bid_input") {
                 deal.auction = data.auction
                 deal.canDouble = data.can_double
                 deal.canRedouble = data.can_redouble
                 deal.expectBidInput = true
-                deal.renderBiddingBox(document.querySelector('#north'))
+                deal.renderBiddingBox(document.querySelector('#bidding'))
 
                 document.querySelectorAll('#bidding-calls div').forEach(el =>
                     el.addEventListener("click", callClick))
@@ -284,30 +271,20 @@
                 setTurn(deal.turn)
                 deal.currentTrick = new Trick(deal.turn, [])
 
-                document.querySelector('#north').textContent = ''
-
-                if (deal.declarer == 3) {
-                    deal.renderAuction(document.querySelector('#west'))
-                } else {
-                    deal.renderAuction(document.querySelector('#east'))
-                }
+                //document.querySelector('#north').textContent = ''
+                document.querySelector('#bidding').textContent = ''
+                deal.renderAuction(document.querySelector('#auction'))
 
                 document.querySelectorAll('.card')
                     .forEach(c => c.addEventListener('click', cardClick))
             } else if (data.message == "show_dummy") {
 
-                let publicHand = parseHand(data.dummy)
-                deal.public = publicHand
+                deal.hands[data.player] = parseHand(data.dummy)
 
-                let dummyContainerId = ['#north', '#east', '#south', '#west'][deal.dummy]
-
-                if (deal.dummy == 0) {
-                    deal.public.render(document.querySelector(dummyContainerId))
-                } else if (deal.dummy == 2) {
-                    deal.public.render(document.querySelector('#north'))
-                } else {
-                    deal.public.renderEW(document.querySelector(dummyContainerId))
-                }
+                if (data.player == 0) deal.hands[data.player].render(document.querySelector('#north'))
+                if (data.player == 1) deal.hands[data.player].renderEW(document.querySelector('#east'))
+                if (data.player == 2) deal.hands[data.player].render(document.querySelector('#south'))
+                if (data.player == 3) deal.hands[data.player].renderEW(document.querySelector('#west'))
 
                 document.querySelectorAll('.card')
                     .forEach(c => c.addEventListener('click', cardClick))
@@ -315,20 +292,59 @@
                 let card = new Card(data.card)
                 
                 deal.currentTrick.cards.push(card)
-                if (data.player == 2) {
-                    deal.hand = deal.hand.play(card)
-                    deal.hand.render(document.querySelector('#south'))
-                } else if (data.player == 0) {
-                    if (deal.declarer == 0 || deal.declarer == 2) {
-                        deal.public = deal.public.play(card)
-                        deal.public.render(document.querySelector('#north'))
-                    }
-                } else if (data.player == deal.dummy) {
-                    deal.public = deal.public.play(card)
-                    if (deal.dummy == 1) {
-                        deal.public.renderEW(document.querySelector('#east'))
-                    } else if (deal.dummy == 3) {
-                        deal.public.renderEW(document.querySelector('#west'))
+
+                if (no_human) {
+                    deal.hands[data.player] = deal.hands[data.player].play(card)
+                    if (data.player == 0) deal.hands[0].render(document.querySelector('#north'))
+                    if (data.player == 1) deal.hands[1].renderEW(document.querySelector('#east'))
+                    if (data.player == 2) deal.hands[2].render(document.querySelector('#south'))
+                    if (data.player == 3) deal.hands[3].renderEW(document.querySelector('#west'))
+                } else {
+                    // First check if dummy is to be updated
+                    if (data.player == deal.dummy) {
+                        deal.hands[data.player] = deal.hands[data.player].play(card)
+                        if (deal.dummy == 0) {
+                            deal.hands[data.player].render(document.querySelector('#north'))
+                        } 
+                        if (deal.dummy == 1) {
+                            deal.hands[data.player].renderEW(document.querySelector('#east'))
+                        } 
+                        if (deal.dummy == 2) {
+                            deal.hands[data.player].render(document.querySelector('#south'))
+                        } 
+                        if (deal.dummy == 3) {
+                            deal.hands[data.player].renderEW(document.querySelector('#west'))
+                        }
+                    } else {
+                        if (deal.hands[data.player]) {
+                            // Then check if declarer is human
+                            deal.hands[data.player] = deal.hands[data.player].play(card)
+                            if (data.player == 0 && north) {
+                                deal.hands[data.player].render(document.querySelector('#north'))
+                            } 
+                            if (data.player == 1 && east) {
+                                deal.hands[data.player].renderEW(document.querySelector('#east'))
+                            } 
+                            if (data.player == 2 && south) {
+                                deal.hands[data.player].render(document.querySelector('#south'))
+                            } 
+                            if (data.player == 3 && west) {
+                                deal.hands[data.player].renderEW(document.querySelector('#west'))
+                            } 
+                            // Finally we need to update declarer if we are dummy
+                            if (data.player == 0 && deal.declarer == data.player && south) {
+                                deal.hands[data.player].render(document.querySelector('#north'))
+                            } 
+                            if (data.player == 1 && deal.declarer == data.player && west) {
+                                deal.hands[data.player].renderEW(document.querySelector('#east'))
+                            } 
+                            if (data.player == 2 && deal.declarer == data.player && north) {
+                                deal.hands[data.player].render(document.querySelector('#south'))
+                            } 
+                            if (data.player == 3 && deal.declarer == data.player && east) {
+                                deal.hands[data.player].renderEW(document.querySelector('#west'))
+                            } 
+                        }
                     }
                 }
                 document.querySelectorAll('.card')
@@ -351,6 +367,16 @@
 
                 deal.renderTricks(document.querySelector('.tricks'))
                 deal.expectTrickConfirm = true
+                if (autocomplete) {
+                    // After 5 seconds, set expectTrickConfirm to false
+                    timeoutId = setTimeout(function() {
+                        if (deal.expectTrickConfirm) {
+                            deal.expectTrickConfirm = false;
+                            getTrickCardSlots().forEach(el => el.textContent = "")
+                            ws.send('y')
+                        }
+                    }, 5000); 
+                }
             } else if (data.message == "deal_end") {
                 let handsPBN = data.pbn.split(' ')
                 let north = parseHand(handsPBN[0])
@@ -363,7 +389,7 @@
                 east.renderEW(document.querySelector('#east'))
                 west.renderEW(document.querySelector('#west'))
 
-                deal.renderAuction(document.querySelector('#table'))
+                deal.renderAuction(document.querySelector('#auction'))
                 saveDeal(data.dict)
 
             }
