--- a/src/frontend/bridge.html
+++ b/src/frontend/bridge.html
@@ -77,6 +77,10 @@
         const humandeclares = urlParams.get("H")
         const autocomplete = urlParams.get("A")
         const board_no = urlParams.get("board_no")
+        const name = urlParams.get('name')
+        const timeout = urlParams.get('T')
+        const cont = urlParams.get('C')
+
         let no_human = !north && !east && !south && !west
         let player = ""
         if (north) player += "&N=x"
@@ -85,6 +89,9 @@
         if (west) player += "&W=x"
         if (humandeclares) player += "&H=x"
         if (autocomplete) player += "&A=x"
+        if (name) player += "&name=" + name
+        if (timeout) player += "&T=" + timeout
+        if (cont) player += "&C=x"
         var queryString = ""
         var ws
         if (dealId) {
@@ -105,7 +112,7 @@
 
             ws.addEventListener("close", function (event) {
                 console.log("WebSocket closed:", event);
-                document.querySelector('#auctionstr').innerHTML += 'Connection to server closed <br>'
+                //document.querySelector('#auctionstr').innerHTML += 'Connection to server closed <br>'
             });
 
         } catch(error) {
@@ -375,7 +382,7 @@
                             getTrickCardSlots().forEach(el => el.textContent = "")
                             ws.send('y')
                         }
-                    }, 5000); 
+                    }, timeout * 1000); 
                 }
             } else if (data.message == "deal_end") {
                 let handsPBN = data.pbn.split(' ')
@@ -390,14 +397,58 @@
                 west.renderEW(document.querySelector('#west'))
 
                 deal.renderAuction(document.querySelector('#auction'))
-                saveDeal(data.dict)
+
+                setTimeout(() => {
+                    // Ask the user for confirmation
+                    const shouldSave = window.confirm("Do you want to save the deal?");
+
+                    // Check the user's choice
+                    if (shouldSave) {
+                        // User clicked OK, prompt for additional input
+                        const userFeedback = window.prompt("Was the deal good or bad?");
+                        saveDeal(data.dict, userFeedback);
+                    } else {
+                        // User clicked Cancel or closed the dialog, handle accordingly
+                        console.log("Deal not saved.");
+                        navigate()
+                    }
+                }, 0);
+
 
             }
         };
 
-        function saveDeal(dict) {
+        function navigate() {
+            if (cont) {
+                const queryParams = new URLSearchParams(window.location.search);
+                let board_no = queryParams.get('board_no');
+                if (board_no !== null && board_no !== "") {
+                    reloadLink = updateQueryParam('board_no', String(Number(board_no) + 1));
+                    window.location.href = reloadLink
+                }
+                else window.location.href = '/home';
+            }
+            else window.location.href = '/home';            
+        }
+
+        function updateQueryParam(param, value) {
+            const url = new URL(window.location.href);
+            url.searchParams.set(param, value);
+            return url.href;
+        }
+
+        function saveDeal(dict, feedback) {
             // Convert JavaScript object to JSON string
             const dataStr = JSON.stringify(dict);
+
+            // Parse the JSON string back to a JavaScript object
+            const dataObj = JSON.parse(dataStr);
+
+            // Add the feedback property to the object
+            dataObj.feedback = feedback;
+
+            // Convert the JavaScript object back to a JSON string
+            const newDataStr = JSON.stringify(dataObj);
 
              // Make a POST request
             fetch('/api/save/deal', {
@@ -405,7 +456,7 @@
                 headers: {
                     'Content-Type': 'application/json',
                 },
-                body: dataStr,
+                body: newDataStr,
             })
             .then(response => {
                 if (!response.ok) {
@@ -415,8 +466,7 @@
                 return response.json();
             })
             .then(data => {
-                // Redirect to another page after successful POST
-                window.location.href = '/home';
+                navigate()
             })
             .catch(error => {
                 console.error('There was a problem with the fetch operation:', error);
